Changelog
=========

0.4 (unreleased)
----------------

- Nothing changed yet.


0.3 (2015-06-05)
----------------

- Allow to skip portlet sanitising
- fix reporting of the field type
- pass if UID() cannot be called on the found new context
  [fred]
    
- Also sanitise image links.
- Fix resolveUid capitalised links generated by FCKeditor, these break TinyMCE.
- Make resolving relative urls to UID's optional
- Enable 'dry run' by default to avoid mistakes. 
  [fred]

0.1dev (unreleased)
-------------------

- Initial release