@@ -4,7 +4,8 @@ Changelog
 0.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add field for lnks that should be skipped. Fix pass/continue in the redirectory lookup
+  [fred]
 
 
 0.3 (2015-06-05)
